--- a/src/assets/styles/Creator/creator.scss
+++ b/src/assets/styles/Creator/creator.scss
@@ -28,10 +28,15 @@
 	}
 
 	.top-section {
-		@include default.top-section;
+		@include default.top-section;	
 		@media (max-width:1023px) {
 			.back {
 				left: 30px;
+			}
+		}
+		@media (max-width:400px) {
+			.back {
+				left: 15px;
 			}
 		}
 	}
@@ -184,7 +189,7 @@
 				}
 			}
 			@media (max-width: 600px) {
-				margin-top: 10px;
+				margin-top: 20px;
 			}
 		}
 	}
