--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -38,7 +38,11 @@
 		}
 	}
 	@media(max-width: 600px) {
-		visibility: hidden;
+		a {
+			p { 
+				display: none;
+			}
+		}
 	}
 }
 
@@ -79,12 +83,25 @@
 		margin-top: 2.5px;
 		height: 44px;
 		line-height: 24.52px;
-		display: inline-grid;
+		display: inline-flex;
+		align-items: center;
 		align-content: center;
 		font-size: 28px;
 		font-weight: 700;
 		color: $orange;
 		margin: 1px 0 0 4px;
+		width: max-content;
+
+		span {
+			margin-left: 4px;
+			background-color: rgba(255, 0, 0, 0.664);
+			height: max-content;
+			color: #fff;
+			padding: 5px 8px;
+			border-radius: 6px;
+			font-size: 18px;
+		}
+
 	}
 
 	@media (max-width: 600px) {
