Fix back button allignment for mobile

--- a/src/assets/styles/Creator/creator.scss
+++ b/src/assets/styles/Creator/creator.scss
@@ -34,9 +34,9 @@
 				left: 30px;
 			}
 		}
-		@media (max-width:400px) {
+		@media (max-width:500px) {
 			.back {
-				left: 15px;
+				left: unset;
 			}
 		}
 	}
